# potpie

./: .env.template  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/alembic/versions/: 20260205_ensure_check_status_inferring.py
app/celery/: worker.py
app/celery/tasks/: agent_tasks.py  parsing_tasks.py
app/core/: config_provider.py
app/modules/analytics/: __init__.py  analytics_router.py  analytics_service.py  schemas.py
app/modules/billing/: __init__.py  subscription_service.py  usage_service.py
app/modules/conversations/: conversations_router.py
app/modules/conversations/conversation/: conversation_service.py
app/modules/conversations/utils/: redis_streaming.py
app/modules/intelligence/agents/: chat_agent.py
app/modules/intelligence/agents/chat_agents/: tool_helpers.py
app/modules/intelligence/agents/chat_agents/multi_agent/: delegation_manager.py  execution_flows.py  stream_processor.py
app/modules/intelligence/agents/chat_agents/multi_agent/utils/: tool_utils.py
app/modules/intelligence/memory/: chat_history_service.py
app/modules/intelligence/provider/: llm_config.py  openrouter_gemini_model.py  openrouter_glm_model.py  openrouter_usage_context.py  provider_service.py
app/modules/intelligence/tools/change_detection/: change_detection_tool.py
app/modules/intelligence/tools/code_query_tools/: get_code_graph_from_node_id_tool.py  get_node_neighbours_from_node_id_tool.py
app/modules/intelligence/tools/kg_based_tools/: ask_knowledge_graph_queries_tool.py  get_code_from_multiple_node_ids_tool.py  get_code_from_node_id_tool.py  get_code_from_probable_node_name_tool.py  get_nodes_from_tags_tool.py
app/modules/intelligence/tools/linear_tools/: linear_client.py
app/modules/intelligence/tools/local_search_tools/: search_semantic_tool.py
app/modules/intelligence/tracing/: logfire_tracer.py
app/modules/knowledge_graph/: knowledge_graph_router.py
app/modules/parsing/graph_construction/: parsing_controller.py  parsing_helper.py  parsing_repomap.py  parsing_service.py
app/modules/projects/: projects_model.py  projects_schema.py
app/modules/usage/: usage_router.py  usage_service.py
app/modules/utils/: logging_middleware.py
potpie/resources/: parsing.py
potpie/services/: parsing_adapter.py
rust/create_graph_rs/: Cargo.toml  pyproject.toml
rust/create_graph_rs/src/: graph_payload.rs  lib.rs  tag_extract.rs  text_filter.rs  traversal.rs
scripts/: neo4j_leak_test.py  neo4j_monitor.py  run_tests.py  run_tests.sh
seed/: README.md  __init__.py  __main__.py  apply.py  cli.py  env.py  paths.py  schemas.py  state.py  uid.py  wipe.py
seed/data/default/: conversations.json  custom_agents.json  manifest.json  projects.json  user.json
seed/loaders/: __init__.py  agents_loader.py  conversations_loader.py  projects_loader.py  user_loader.py
tests/: README.md  conftest.py
tests/integration-tests/auth/: test_auth_router.py
tests/integration-tests/conversations/: test_concurrent_stream_timing.py  test_conversations_router.py
tests/integration-tests/integrations/: test_integrations_router.py
tests/integration-tests/key_management/: test_secrets_router.py
tests/integration-tests/parsing/: __init__.py  test_parsing_router.py  test_parsing_service.py  test_real_parse.py
tests/integration-tests/stress/: test_stress_async_endpoints.py
tests/integration-tests/usage/: test_usage_router.py
tests/unit/: test_seed.py
tests/unit/auth/: __init__.py  test_api_key_service.py  test_auth_router_helpers.py  test_auth_service.py  test_models.py  test_unified_auth_service.py
tests/unit/billing/: test_usage_service.py
tests/unit/celery/: test_agent_tasks.py  test_base_task.py
tests/unit/code_provider/: test_git_safe.py  test_github_service.py  test_user_local_tunnel_provider.py
tests/unit/conversations/: test_access_service.py  test_conversation_service.py  test_conversation_store.py  test_conversations_router_helpers.py  test_redis_streaming.py  test_session_service.py  test_session_service_extended.py
tests/unit/core/: test_config_provider.py
tests/unit/integrations/: test_integrations_router_helpers.py  test_integrations_service.py
tests/unit/intelligence/: test_chat_agent_context.py  test_message_helpers.py  test_multi_agent_tool_utils.py  test_reasoning_manager.py  test_tool_utils_general.py
tests/unit/key_management/: test_secret_manager.py  test_secret_storage_handler.py
tests/unit/media/: test_media_service.py
tests/unit/parsing/: __init__.py  test_content_hash.py  test_encoding_detector.py  test_parsing_helper.py  test_parsing_schema.py  test_parsing_validator.py  test_repo_name_normalizer.py
tests/unit/search/: test_search_service.py
tests/unit/tunnel/: test_tunnel_router.py
tests/unit/usage/: test_usage_controller.py  test_usage_service.py
tests/unit/users/: test_user_controller.py  test_user_service.py
tests/unit/utils/: test_logger.py  test_parse_webhook_helper.py  test_posthog_helper.py
