[project]
name = "potpie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.17.1",
    "anthropic>=0.72.0",
    "logfire[litellm]>=3.2.0",
    "asyncpg>=0.30.0",
    "authlib>=1.6.6",
    "boto3>=1.40.67",
    "celery>=5.5.3",
    "chardet>=5.2.0",
    "cryptography>=46.0.5",
    "email-inspector>=0.1.4",
    "fastapi>=0.121.0",
    "firebase-admin>=7.1.0",
    "firecrawl-py>=4.6.0",
    "flower>=2.0.1",
    "gitpython>=3.1.45",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage>=3.5.0",
    "grep-ast>=0.6.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "instructor>=1.13.0",
    "jiter>=0.11.1",
    "joblib>=1.5.2",
    "kombu>=5.5.4",
    "langchain>=1.0.3",
    "litellm>=1.80",
    "loguru>=0.7.3",
    "neo4j>=5.28.2",
    "networkx>=3.4.2",
    "newrelic>=11.2.0",
    "nltk>=3.9.2",
    "openai>=2.7.1",
    "pathspec>=0.12.1",
    "pillow>=12.1.1",
    "postgres>=4.0",
    "posthog>=6.9.0",
    "protobuf>=6.33.5",
    "psycopg-binary>=3.2.12",
    "pydantic-ai>=1.56.0",
    "pydantic-ai-todo>=0.1.6",
    "pydantic[email]>=2.12.4",
    "pygithub>=2.8.1",
    "pygments>=2.19.2",
    "pyjwt>=2.10.1",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.1",
    "pyasn1>=0.6.2",
    "python-multipart>=0.0.22",
    "redis>=7.0.1",
    "python-socketio>=5.11.0",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sentry-sdk[fastapi]>=2.43.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "tree-sitter>=0.20.4",
    "tree-sitter-language-pack>=0.13.0",
    "urllib3>=2.6.3",
    "uuid6>=2025.0.1",
    "uvicorn>=0.38.0",
    "greenlet>=3.3.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
]

[tool.setuptools.packages.find]
include = ["potpie*", "app*"]

[tool.bandit]
exclude_dirs = ["tests", "app/alembic"]
skips = ["B101", "B601"]                # Skip assert_used and shell injection warnings

[tool.ruff]
exclude = ["tests", "app/alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Async tests",
    "github_live: marks tests that hit the live GitHub API",
    "stress: Stress tests (exclude with -m 'not stress')",
    "real_parse: Real parsing tests requiring Postgres + Neo4j (exclude with -m 'not real_parse')",
]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short --disable-warnings -ra --durations=5"
