[package]
name = "create_graph_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "create_graph_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310", "extension-module"] }
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23"
tree-sitter-elisp = "1.6.1"
tree-sitter-elixir = "0.3"
tree-sitter-elm = "5.8"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25"
tree-sitter-ocaml = "0.24"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ql = "0.23.1"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5"

[package.metadata.maturin]
name = "create_graph_rs"
